--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3548,6 +3548,102 @@ input, select, textarea {
 
 	}
 
+/* Now playing */
+
+	/* The Modal (background) */
+	.now-playing {
+		display: none; /* Hidden by default */
+		position: fixed; /* Stay in place */
+		z-index: 1; /* Sit on top */
+		left: 0;
+		top: 0;
+		width: 100%; /* Full width */
+		height: 100%; /* Full height */
+		overflow: auto; /* Enable scroll if needed */
+		background-color: rgb(0,0,0); /* Fallback color */
+		background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+		animation: FadeAnimation 1s ease-in 2s forwards;		
+	}
+	
+		/* Modal Content */
+		.now-playing-content {
+			position: fixed;
+			font-size: 25px;
+			bottom: 0;
+			background-color: #726193;
+			width: 100%;
+			-webkit-animation-name: slideIn;
+			-webkit-animation-duration: 0.4s;
+			animation-name: slideIn;
+			animation-duration: 0.4s;
+			
+		}
+		
+		/* The Close Button */
+		.close {
+			color: rgb(255, 255, 255);
+			float: right;
+			font-size: 28px;
+			font-weight: bold;
+		}
+		
+		.close:hover,
+		.close:focus {
+			color: rgb(163, 102, 150);
+			text-decoration: none;
+			cursor: pointer;
+		}
+		
+		.now-playing-header {
+			padding: 2px 16px;
+			background-color: #5cb85c;
+			color: white;
+		}
+		
+		.now-playing-body {
+			padding: 2px 16px;
+			text-align: center;
+		}
+		
+		.now-playing-footer {
+			padding: 2px 16px;
+			background-color: #726193;
+			color: white;
+		}
+		
+		/* Add Animation */
+		@-webkit-keyframes slideIn {
+			from {bottom: -300px; opacity: 0} 
+			to {bottom: 0; opacity: 1}
+		}
+		
+		@keyframes slideIn {
+			from {bottom: -300px; opacity: 0}
+			to {bottom: 0; opacity: 1}
+		}
+		
+		@-webkit-keyframes fadeIn {
+			from {opacity: 0} 
+			to {opacity: 1}
+		}
+		
+		@keyframes fadeIn {
+			from {opacity: 0} 
+			to {opacity: 1}
+		}
+
+		@keyframes FadeAnimation {
+			0% {
+			  opacity: 1;
+			  visibility: visible;
+			}
+		  
+			100% {
+			  opacity: 0;
+			  visibility: hidden;
+			}
+		  }
+
 /* Wrapper */
 
 	#wrapper {
