--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3569,8 +3569,11 @@ input, select, textarea {
 		.now-playing-content {
 			position: fixed;
 			font-size: 25px;
+			text-align: center;
 			bottom: 0;
-			background-color: #726193;
+			background-color: #4d5291;
+			background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(114, 97, 147, 0.25) 25%, rgba(227, 123, 124, 0.25) 50%, rgba(255, 228, 180, 0.25));
+			background-size: 128px 128px, auto;
 			width: 100%;
 			-webkit-animation-name: slideIn;
 			-webkit-animation-duration: 0.4s;
@@ -3596,7 +3599,7 @@ input, select, textarea {
 		
 		.now-playing-header {
 			padding: 2px 16px;
-			background-color: #5cb85c;
+			background-color: #726193;
 			color: white;
 		}
 		
@@ -3610,7 +3613,7 @@ input, select, textarea {
 			background-color: #726193;
 			color: white;
 		}
-		
+	
 		/* Add Animation */
 		@-webkit-keyframes slideIn {
 			from {bottom: -300px; opacity: 0} 
